--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -922,5 +922,14 @@ td.title
   :padding 5px 12px
   :bottom 0
   :right 15px
+
+.grid_view_details 
+  .image_size
+    :padding-right 50px
+    :position relative
+  .image_sizes
+    :position absolute
+    :top -3px
+    :right 0
 @import dashboard.sass
 @import listing.sass
