Change up and down arrows. Fixes #13

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -931,5 +931,8 @@ td.title
     :position absolute
     :top -3px
     :right 0
+
+img.arrow
+  :vertical-align 50%
 @import dashboard.sass
 @import listing.sass
