some little ui tweaks

--- a/app/views/searches/_filters.html.haml
+++ b/app/views/searches/_filters.html.haml
@@ -27,7 +27,7 @@
       = text_field_tag :min, params[:min], :title => 'min', :class => 'input_price'
       = text_field_tag :max, params[:max], :title => 'max', :class => 'input_price'      
     #search_radius
-      %span Distance 
+      %span Distance: 
       = text_field_tag :radius, nil, :id => 'slider_amount', :readonly => 'readonly'
       #slider
     %button.btn_sm Set
