--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -706,9 +706,9 @@ tr.selected
 td.fixed, th.fixed
   :width 50px
   :padding-left 15px
-td.icon, th.icon
+td.icon
   :width 35px
-  :text-align left
+  :text-align center
   a.fav
     :background url('/images/ui.png') 0 -12px no-repeat
     :text-indent -10000px
@@ -720,6 +720,8 @@ td.icon, th.icon
       :background-position 0 -24px
     &.on
       :background-position 0 -36px
+th.icon
+  :text-align left
 tr td a.photo_link
   :display block
   :width 19px
