--- a/app/views/listings/_results.html.haml
+++ b/app/views/listings/_results.html.haml
@@ -8,7 +8,7 @@
       %th.price= sort_link_to(:price, 'Price')
       %th= city ? sort_link_to(:distance, 'Distance') : 'Location'
       %th= sort_link_to(:rating, 'User Rating')
-      %th.icon= image_tag('favorite_header.png', :alt => 'favorite')
+      %th.icon
   %tbody
     - results.each do |listing|
       - listing = listing.presenter
