--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -921,14 +921,15 @@ td.title
   .file_field
     :margin 0 4px 4px 0
 .messages
-  :background-color #FFFF33
-  :font-size 12px
+  :background-color #FFFF00
+  :color #DDB62E
+  :font-size 13px
   :font-weight bold
   :width auto
   :position fixed
   :padding 5px 12px
-  :bottom 0
-  :right 15px
+  :bottom 0px
+  :right 100px
 
 .grid_view_details 
   .image_size
