--- a/app/views/users/_bar.html.haml
+++ b/app/views/users/_bar.html.haml
@@ -1,7 +1,7 @@
 - if current_page?(sign_up_path)
   .logo_top
     %h2
-      = link_to 'Suprmarket', root_path
+      = link_to image_tag( 'logo-sm.png'), root_path
   = render 'searches/bar'
   .logged_out
     .login
@@ -20,7 +20,7 @@
   - unless current_page?(root_path)
     .logo_top
       %h2
-        = link_to 'Suprmarket', root_path
+        = link_to image_tag( 'logo-sm.png'), root_path
     = render 'searches/bar'
   .logged_out
     = link_to t(:register).capitalize, sign_up_path, :id => 'register'  
@@ -39,7 +39,7 @@
 - else
   .logo_top
     %h2
-      = link_to 'Suprmarket', dashboard_path
+      = link_to image_tag( 'logo-sm.png'), root_path
   - unless current_page?(new_listing_path)
     = render 'searches/bar'
   = link_to 'Post', new_listing_path, :class => 'post_link'    
