fixed searchbar bug, several minor UI changes

--- a/public/stylesheets/sass/dashboard.sass
+++ b/public/stylesheets/sass/dashboard.sass
@@ -11,7 +11,7 @@ body.dashboards, body.buying, body.selling, body.feedback, body.preferences
   :float left
   :width 100%
   background = !color3
-  :padding 10px 0
+  :padding 7px 0
   a
     :padding 4px 15px
     :margin 0 4px 0 0
@@ -31,7 +31,7 @@ body.dashboards, body.buying, body.selling, body.feedback, body.preferences
       :background #FFFFFF
       :color #ff3300
       :font-weight bold
-      :vertical-align text-top
+      :vertical-align middle
 
 a.first_tab_heading
 a.active_tab_heading
