--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,7 +1,7 @@
 / @import reset.sass
 !sans = "Helvetica Neue", Helvetica, Arial, sans-serif
 !serif = Georgia, serif
-!color1 = #292929
+!color1 = #191919
 !color2 = #2098E5
 !color3 = #E1F3FD
 !color4 = #2D7BB2
@@ -28,9 +28,9 @@ h1
   :width 100%
   :height auto
   :float left
-  :font-size 20px
+  :font-size 18px
   :font-weight normal
-  :padding 13px 0 13px 15px
+  :padding 10px 0 13px 15px
   :margin 0 0 0 -15px
 button
   :vertical-align middle
@@ -38,7 +38,7 @@ button
   font-family = !sans
   :font-weight bold
   :border 1px solid #aaa
-  :color #333
+  :color #222
   :text-shadow 0px 1px 0px #fff
   :background url('/images/btn_bg.png') 0 0 repeat-x
   &:hover
@@ -103,9 +103,9 @@ a
         color = !color4
 .header
   :text-align right
-  :height 65px
+  :height 46px
   :width 100%
-  :background-color #292929
+  background-color = !color1
   :padding 5px 0 0 0
   a
     :color #fff
@@ -137,7 +137,7 @@ a
     :padding 5px 11px
     :text-shadow 0 -1px 0 #093366
     :float right
-    :margin 15px 15px
+    :margin 5px 15px
     &:hover
       :background #1780D1
       :color #fff
@@ -145,11 +145,11 @@ a
       background-color = !color4
   #register
     :float right
-    :margin 11px 17px 0 0
+    :margin 1px 17px 0 0
   .login
     :float right
     :z-index 1000
-    :margin 17px 5px
+    :margin 7px 5px
     :position relative
     #login_link
       :margin-right 10px
@@ -226,9 +226,11 @@ label
   :padding-right 10px
 
 #search_small
-  :float left
-  :width 530px
-  :margin 15px 0 0
+  :text-align left
+  :position absolute
+  :width 520px
+  :top 10px
+  :left 170px
   input
     :outline none
   button
@@ -254,11 +256,11 @@ label
     :margin 0
     :padding 3px 5px
     :border-right 0
-    :width 255px
+    :width 253px
   #zip_code
     :font-size 15px
     :margin-left -5px
-    :width 58px
+    :width 50px
     :padding 3px 5px
     :border-left-color #000
   #categories
@@ -348,7 +350,7 @@ label
     :height 32px
     :overflow hidden
     :float left
-    :margin 15px 15px
+    :margin 5px 15px
     :color #fff
   
 .tagline
@@ -576,7 +578,7 @@ span.user
   :float right
   :width auto
   :font-size 11px
-  :margin 22px 0 0 0
+  :margin 13px 0 0 0
   :font-weight bold
   :color #444
   .details a
