--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -957,5 +957,16 @@ td.title
 
 img.arrow
   :vertical-align 50%
+  
+#errorExplanation
+  :width 100%
+  :height auto
+  :float left
+  :color #ff3300
+  h2
+    :font-size 14px
+  p, ul
+    :font-size 12px
+    
 @import dashboard.sass
 @import listing.sass
